fixing spacing issue on bloglist

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -80,7 +80,9 @@ a {
 .mb-15 {
   margin-bottom: 15px;
 }
-
+.bv_mainselect {
+  padding: 5px 5px 0;
+}
 .bv_mainselect {
   & > .bv_background {
     min-width: 150px;
